support/dev/k8s/base/nats-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  labels:
    app: nats
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.3.3
          ports:
            - containerPort: 4222
            - containerPort: 6222
            - containerPort: 8222
      restartPolicy: Always
