support/dev/k8s/base/otelcol-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcol
  labels:
    app: otelcol
spec:
  selector:
    matchLabels:
      app: otelcol
  template:
    metadata:
      labels:
        app: otelcol
    spec:
      containers:
        - name: otelcol
          image: otel/opentelemetry-collector-contrib:0.31.0
          ports:
            - containerPort: 4317
            - containerPort: 55679
          volumeMounts:
            - name: config
              mountPath: /etc/otel
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: otelcol
