support/dev/k8s/base/sdf-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdf
  labels:
    app: sdf
spec:
  selector:
    matchLabels:
      app: sdf
  template:
    metadata:
      labels:
        app: sdf
    spec:
      containers:
        - name: sdf
          image: systeminit/si-sdf:20210804.175704.0-sha.8bf62c25
          ports:
            - containerPort: 5156
      imagePullSecrets:
        - name: dockerhub
      restartPolicy: Always
