support/dev/k8s/base/veritech-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veritech
  labels:
    app: veritech
spec:
  selector:
    matchLabels:
      app: veritech
  template:
    metadata:
      labels:
        app: veritech
    spec:
      containers:
        - name: veritech
          image: systeminit/si-veritech:20210805.212101.0-sha.334dd9e1
          ports:
            - containerPort: 5157
          securityContext:
            privileged: true
      imagePullSecrets:
        - name: dockerhub
      restartPolicy: Always
