support/dev/k8s/base/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: systeminit/si-web:stable
          ports:
            - containerPort: 80
      imagePullPolicy: Always
      imagePullSecrets:
        - name: dockerhub
      restartPolicy: Always
