support/dev/k8s/base/nats-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app: nats
spec:
  selector:
    app: nats
  ports:
    - name: nats
      port: 4222
    - name: clustering
      port: 6222
    - name: mgmt
      port: 8222
