support/dev/k8s/base/otelcol-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otelcol
  labels:
    app: otelcol
spec:
  selector:
    app: otelcol
  ports:
    - name: "4317"
      port: 4317
    - name: "55679"
      port: 55679
