support/dev/k8s/base/sdf-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sdf
  labels:
    app: sdf
spec:
  selector:
    app: sdf
  ports:
    - port: 5156
