support/dev/k8s/base/veritech-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: veritech
  labels:
    app: veritech
spec:
  selector:
    app: veritech
  ports:
    - port: 5157
