support/dev/k8s/base/sdf-ws-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdf-ws
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /updates
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: app.systeminit.com
      http:
        paths:
          - path: /api/updates
            pathType: Prefix
            backend:
              service:
                name: sdf
                port:
                  number: 5156
